# Neobis_Shortener_Project

./: pyproject.toml
url_shortener/shortener/: endpoints.py  models.py  serializers.py  urls.py
url_shortener/shortener/migrations/: 0001_create_model_url.py
url_shortener/url_shortener/: settings.py  urls.py
